[package]
name = "dbranch"
version = "0.1.0"
edition = "2024"

[dependencies]
prettytable-rs = { version = "^0.10" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1.41"
thiserror = "2.0.16"
anyhow = "1.0.99"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
docker-wrapper = "0.8.2"
size = "0.5.0-preview2"
nix = {version = "0.30.1", features = ["zerocopy", "user"]}
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
rust-embed = "8"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
webbrowser = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
